Fix additional test files for Java 8 compatibility
Convert e2e test programs and helpers to use Java 8 compatible syntax
(remove text blocks, var, Path.of, etc.)

https://claude.ai/code/session_01UHzJZuUdL5vpz2QML1dc1f