@@ -89,7 +89,7 @@ public class HeapObjectFreezeProgram {
         Durable.freeze(snapshot -> {
             try {
                 byte[] bytes = serialize(snapshot);
-                Files.write(Path.of(snapshotFile), bytes);
+                Files.write(Paths.get(snapshotFile), bytes);
                 System.out.println("FREEZE_COMPLETE");
                 System.out.println("HEAP_SIZE=" + snapshot.heap().size());
                 System.out.flush();
