@@ -4,11 +4,14 @@ import org.junit.jupiter.api.*;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -35,7 +38,7 @@ class ReadmeDemoIT {
     @AfterEach
     void tearDown() throws IOException {
         if (tempDir != null) {
-            try (var files = Files.walk(tempDir)) {
+            try (Stream<Path> files = Files.walk(tempDir)) {
                 files.sorted(Comparator.reverseOrder())
                         .forEach(p -> { try { Files.delete(p); } catch (IOException ignored) {} });
             }
@@ -48,40 +51,40 @@ class ReadmeDemoIT {
         String agentJar = findAgentJar();
 
         // Write FreezeDemo.java — exactly as shown in the README
-        Files.writeString(tempDir.resolve("FreezeDemo.java"), """
-                import ai.jacc.durableThreads.Durable;
-
-                public class FreezeDemo {
-                    public static void main(String[] args) throws Exception {
-                        for (int i = 0; i <= 10; i++) {
-                            System.out.println("i=" + i);
-
-                            if (i == 5) {
-                                System.out.println("About to freeze!");
-                                Durable.freeze("./snapshot.dat");
-                                // Everything below only runs after restore
-                                System.out.println("Resumed!");
-                            }
-                        }
-                        System.out.println("Done!");
-                    }
-                }
-                """);
+        String freezeDemoSource =
+                "import ai.jacc.durableThreads.Durable;\n"
+                + "\n"
+                + "public class FreezeDemo {\n"
+                + "    public static void main(String[] args) throws Exception {\n"
+                + "        for (int i = 0; i <= 10; i++) {\n"
+                + "            System.out.println(\"i=\" + i);\n"
+                + "\n"
+                + "            if (i == 5) {\n"
+                + "                System.out.println(\"About to freeze!\");\n"
+                + "                Durable.freeze(\"./snapshot.dat\");\n"
+                + "                // Everything below only runs after restore\n"
+                + "                System.out.println(\"Resumed!\");\n"
+                + "            }\n"
+                + "        }\n"
+                + "        System.out.println(\"Done!\");\n"
+                + "    }\n"
+                + "}\n";
+        Files.write(tempDir.resolve("FreezeDemo.java"), freezeDemoSource.getBytes(StandardCharsets.UTF_8));
 
         // Write RestoreDemo.java — exactly as shown in the README
-        Files.writeString(tempDir.resolve("RestoreDemo.java"), """
-                import ai.jacc.durableThreads.Durable;
-
-                public class RestoreDemo {
-                    public static void main(String[] args) throws Exception {
-                        Durable.restore("./snapshot.dat", true, true);
-                    }
-                }
-                """);
+        String restoreDemoSource =
+                "import ai.jacc.durableThreads.Durable;\n"
+                + "\n"
+                + "public class RestoreDemo {\n"
+                + "    public static void main(String[] args) throws Exception {\n"
+                + "        Durable.restore(\"./snapshot.dat\", true, true);\n"
+                + "    }\n"
+                + "}\n";
+        Files.write(tempDir.resolve("RestoreDemo.java"), restoreDemoSource.getBytes(StandardCharsets.UTF_8));
 
         // --- Compile with javac -g (exactly as README instructs) ---
         String javaHome = System.getProperty("java.home");
-        String javac = Path.of(javaHome, "bin", "javac").toString();
+        String javac = Paths.get(javaHome, "bin", "javac").toString();
 
         ProcessBuilder compilePb = new ProcessBuilder(
                 javac, "-g", "-cp", agentJar,
@@ -97,7 +100,7 @@ class ReadmeDemoIT {
         assertTrue(Files.exists(tempDir.resolve("RestoreDemo.class")), "RestoreDemo.class should exist");
 
         // --- Run FreezeDemo (freezes main thread at i==5) ---
-        String java = Path.of(javaHome, "bin", "java").toString();
+        String java = Paths.get(javaHome, "bin", "java").toString();
         String classpath = tempDir.toAbsolutePath() + File.pathSeparator + agentJar;
 
         ProcessBuilder freezePb = new ProcessBuilder(
@@ -112,8 +115,8 @@ class ReadmeDemoIT {
         freezePb.environment().remove("JAVA_TOOL_OPTIONS");
         Process freezeProc = freezePb.start();
 
-        var freezeStdout = CompletableFuture.supplyAsync(() -> readStream(freezeProc.getInputStream()));
-        var freezeStderr = CompletableFuture.supplyAsync(() -> readStream(freezeProc.getErrorStream()));
+        CompletableFuture<String> freezeStdout = CompletableFuture.supplyAsync(() -> readStream(freezeProc.getInputStream()));
+        CompletableFuture<String> freezeStderr = CompletableFuture.supplyAsync(() -> readStream(freezeProc.getErrorStream()));
 
         assertTrue(freezeProc.waitFor(60, TimeUnit.SECONDS), "FreezeDemo should complete within 60s");
 
@@ -121,7 +124,7 @@ class ReadmeDemoIT {
         String fErr = freezeStderr.get(5, TimeUnit.SECONDS);
 
         System.out.println("=== FREEZE STDOUT ===\n" + fOut);
-        if (!fErr.isBlank()) System.out.println("=== FREEZE STDERR ===\n" + fErr);
+        if (!fErr.trim().isEmpty()) System.out.println("=== FREEZE STDERR ===\n" + fErr);
 
         // Should print i=0 through i=5 and "About to freeze!"
         for (int i = 0; i <= 5; i++) {
@@ -152,8 +155,8 @@ class ReadmeDemoIT {
         restorePb.environment().remove("JAVA_TOOL_OPTIONS");
         Process restoreProc = restorePb.start();
 
-        var restoreStdout = CompletableFuture.supplyAsync(() -> readStream(restoreProc.getInputStream()));
-        var restoreStderr = CompletableFuture.supplyAsync(() -> readStream(restoreProc.getErrorStream()));
+        CompletableFuture<String> restoreStdout = CompletableFuture.supplyAsync(() -> readStream(restoreProc.getInputStream()));
+        CompletableFuture<String> restoreStderr = CompletableFuture.supplyAsync(() -> readStream(restoreProc.getErrorStream()));
 
         assertTrue(restoreProc.waitFor(60, TimeUnit.SECONDS), "RestoreDemo should complete within 60s");
 
@@ -161,7 +164,7 @@ class ReadmeDemoIT {
         String rErr = restoreStderr.get(5, TimeUnit.SECONDS);
 
         System.out.println("=== RESTORE STDOUT ===\n" + rOut);
-        if (!rErr.isBlank()) System.out.println("=== RESTORE STDERR ===\n" + rErr);
+        if (!rErr.trim().isEmpty()) System.out.println("=== RESTORE STDERR ===\n" + rErr);
 
         // Restored thread should resume and complete
         assertTrue(rOut.contains("Resumed!"), "Restored thread should print 'Resumed!'");
@@ -180,19 +183,19 @@ class ReadmeDemoIT {
                 "Restore must not replay 'About to freeze!'. Stdout:\n" + rOut);
 
         // Exact output check: only post-freeze lines
-        var userLines = rOut.lines()
-                .filter(l -> !l.isBlank())
+        List<String> userLines = rOut.lines()
+                .filter(l -> !l.trim().isEmpty())
                 .filter(l -> !l.startsWith("Listening for transport dt_socket"))
-                .toList();
-        assertEquals(List.of(
+                .collect(Collectors.toList());
+        assertEquals(Arrays.asList(
                 "Resumed!", "i=6", "i=7", "i=8", "i=9", "i=10", "Done!"),
                 userLines,
                 "Restore output should be exactly the post-freeze lines. Got:\n" + rOut);
     }
 
     private static String findAgentJar() {
-        Path target = Path.of("target");
-        try (var files = Files.list(target)) {
+        Path target = Paths.get("target");
+        try (Stream<Path> files = Files.list(target)) {
             return files
                     .filter(p -> p.getFileName().toString().startsWith("durable-threads-"))
                     .filter(p -> p.getFileName().toString().endsWith(".jar"))
@@ -208,7 +211,7 @@ class ReadmeDemoIT {
     }
 
     private static String readStream(java.io.InputStream is) {
-        try (var reader = new java.io.BufferedReader(new java.io.InputStreamReader(is))) {
+        try (java.io.BufferedReader reader = new java.io.BufferedReader(new java.io.InputStreamReader(is))) {
             StringBuilder sb = new StringBuilder();
             String line;
             while ((line = reader.readLine()) != null) {
